2006-09-19  Alex Schroeder  <alex@gnu.org>

	* t/test.pl (test_page, test_page_negative): Use name() for the
	test name.
	(xpath_do, xpath_test, negative_xpath_test): Move the common stuff
	in both tests into a third sub.
	(get_text_via_xpath): Replaced with xpath_test.
	(xpath_run_tests, run_tests): Run tests in order.

	* t/default-markup.t: Don't reset $NetworkFile = 0 at the end, as
	each *.t file runs in a separate process.

	* Makefile (test): Replace call to test.pl with a Test::Harness
	call.
	(oldtest): Keep the old tests until migrated.

2006-09-18  Alex Schroeder  <alex@gnu.org>

	* modules/atom.pl (DoAtom): Use /atom/info for the info document.
	Both /atom and /atom/feed should return the feed. /atom/full
	should return the feed including page content.

2006-09-14  Alex Schroeder  <alex@gnu.org>

	* modules/tex.pl: Fix regular expression.

2006-09-12  Alex Schroeder  <alex@gnu.org>

	* modules/webdav.pl (body): Comment warning.

	* modules/creole.pl (CreoleRule): Fix hr rule.

2006-09-11  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (PrintPageHtml): Allow skipping using page=0.
	(GetRcRss): Cosmetics.
	(InitVariables): Add $RsExclude to %AdminPages.
	(PrintPageDiff): Print hr only if pages will follow.

2006-09-08  Alex Schroeder  <alex@gnu.org>

	* modules/creole.pl (CreoleRule): No markup within headings. No
	space required after list item character.

2006-09-07  Alex Schroeder  <alex@gnu.org>

	* modules/delete-all.pl ($DeleteAge): New option.

	* modules/throttle.pl (DoInstanceThrottle): Longer message do go
	along with the "Too many instances" error.

	* modules/creole.pl (CreoleRule): Eat more list characters.
	(CreoleRule): Use code for inline unprocessed.

2006-09-06  Alex Schroeder  <alex@gnu.org>

	* modules/usemod.pl (UsemodRule): Changed an if into an elsif.

2006-09-05  Alex Schroeder  <alex@gnu.org>

	* modules/creole.pl (CreoleRule): Support [[link|{{url}}]]. Allow
	leading whitespace for lists.
